package chevalier;

message SourceRequest {
        message Tag {
                required string field = 1;
                required string value = 2;
        }
        repeated Tag tags = 1;
        optional int64 start_page = 2;
        optional int64 sources_per_page = 3;
        optional string query_string = 5;
}
// vim: set expandtab tabstop=8:
