package chevalier;

// Sent as a response to a status request.
message StatusResponse {
        message Origin {
                // Origin name.
                required string origin = 1;
                // Number of sources for this origin.
                required int64 sources = 2;
                // Nanosecond-precision timestamp of last update. 
                optional fixed64 last_updated = 3;
        }
        // All origins currently in the index.
        repeated Origin origins = 1;
}

// vim: set expandtab tabstop=8:
